--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,6 @@
 *.pch
 
 # Libraries
-*.lib
 *.a
 *.la
 *.lo
@@ -50,3 +49,7 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+.DS_Store
+.VSCodeCounter
+.vscode
+BackUp
